<?xml version="1.0"?>
<package format="2">
  <name>wall_follower</name>
  <version>0.0.0</version>
  <description>The wall_follower package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <!-- Dependencias necesarias para compilar y ejecutar -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend> 
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
  </export>
</package>
